--- a/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
@@ -35,7 +35,7 @@ Notons $\Gamma=\displaystyle \bigcup_{i=1,2,3,4} \Gamma_i$ le bord du volume de 
 \begin{equation}
 \int_{\Gamma_1}k \partial_y \Pi \dx - \int_{\Gamma_2}k \partial_x \Pi \dy - \int_{\Gamma_3}k \partial_y \Pi \dx + \int_{\Gamma_4}k \partial_x \Pi \dy = \int_{V_c}F \dx \dy.
 \end{equation}
-Le point $(x_i,y_j)$ étant le centre du volume de contrôle, le membre de droite est approximé de la manière suivante~:
+Le point $(x_i,y_j)$ étant le centre du volume de contrôle, le membre de droite est approché de la manière suivante~:
 \begin{equation}
 \int_{V_c}F \dx \dy = \Delta x \Delta y F_i^j \quad \textrm{dans chaque volume de contrôle~} V_c.
 \end{equation}
