--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -8,7 +8,7 @@
 \chapter{Tableaux et graphiques complémentaires \label{chap:anx_img_complement}}
 
 \section{Ensemble des données}
-L'ensemble des données utilisé pour réaliser ces travaux est présenté dans cette section. L'ensemble des scanners des 2 patients, \Nber et \Chen, est présenté ici. On présentera ensuite l'ensemble des histogrammes des niveaux de gris, correspondant à la zone tumorale contourée manuellement sur les scanners.
+L'ensemble des données utilisé pour réaliser ces travaux est présenté dans cette section. L'ensemble des scanners des 2 patients, \Nber et \Chen, est présenté ici. On présentera ensuite l'ensemble des histogrammes des niveaux de gris, correspondant à la zone tumorale contourée manuellement \correction{(par mes soins)} sur les scanners. \correction{Une étude menée par F. Cornelis à montrer que la variabilité du contourage effectué par 2 médecins différents peut déjà être assez importante dans le cas de métastases hépatiques de GIST.}
 
 \newpage
 %%\section{Ensemble des données}
@@ -148,7 +148,7 @@ L'ensemble des données utilisé pour réaliser ces travaux est présenté dans 
 %\caption{\label{fig:contourageChen} Contourage manuel de la tumeur de \Chen. }
 %\end{figure}
 
-\Chen est d'abord traité à l'imatinib, du jour 0 au jour 845. Après une rechute, le sunitinib est utilisé mais il est totalement inefficace. Au jour~1600, le troisième traitement (sorafenib) est démarré. 
+\Chen est d'abord traité à l'imatinib, du jour 0 au jour 845. Après une rechute, le sunitinib est utilisé mais il est totalement inefficace. Au jour~1600, le troisième traitement (sorafénib) est démarré. 
 Sur la figure ci-dessous, on peut visualiser l'ensemble des scanners réalisés sur ce patient. \vspace{-1cm}
 \begin{figure}[h!]
 \captionsetup[subfigure]{labelformat=simple, labelsep=colon}
@@ -195,7 +195,7 @@ Sur la figure ci-dessous, on peut visualiser l'ensemble des scanners réalisés 
 \FloatBarrier
 %%\section{Histogrammes cliniques}
 \subsection{Histogrammes cliniques de \Nber}
-Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageNber}).\vspace{-10mm}
+Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, correspondant aux niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageNber}).\vspace{-10mm}
 
 \newlength{\largeurhisto}
 \setlength{\largeurhisto}{0.24\textwidth}
@@ -230,7 +230,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, corres
 
 \FloatBarrier
 \subsection{Histogrammes cliniques de \Chen}
-Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageChen}).\vspace{-10mm}
+Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, correspondant aux niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageChen}).\vspace{-10mm}
 
 \begin{figure}[h!]
 \captionsetup[subfigure]{labelformat=simple, labelsep=colon}
@@ -302,7 +302,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, corres
 \subfloat[Jour 1116]{\includeminisimunber{86}}&
 \subfloat[Jour 1179]{\includeminisimunber{91}}
 \end{tabular}
-\caption{\label{fig:simu_complete_nber} Simulation numérique pour \Nber  -- Graduations en~$cm$ -- L'échelle des niveaux de gris est donnée par la  Figure~\ref{fig:schema_correspondance_gris} -- Les valeurs des paramètres pour réaliser cette simulations numériques sont présentées dans la Table~\ref{table_param}. }
+\caption{\label{fig:simu_complete_nber} Simulation numérique pour \Nber  -- Graduations en~$cm$ -- L'échelle des niveaux de gris est donnée par la  Figure~\ref{fig:schema_correspondance_gris} -- Les valeurs des paramètres pour réaliser cette simulation numérique sont présentées dans la Table~\ref{table_param}. }
 \end{figure}
 \FloatBarrier
 \clearpage
@@ -349,7 +349,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, corres
 \subfloat[Jour 1458]{\includeminisimuchen{87}}& 
 \subfloat[Jour 1510]{\includeminisimuchen{90}}
 \end{tabular}
-\caption{\label{fig:simu_complete_chen} Simulation numérique pour \Chen  -- Graduations en~$cm$ -- L'échelle des niveaux de gris est donnée par la  Figure~\ref{fig:schema_correspondance_gris} -- Les valeurs des paramètres pour réaliser cette simulations numériques sont présentées dans la Table~\ref{table_param}. -- Pour ce patient, pas d'intention de reproduire la forme de la tumeur. }
+\caption{\label{fig:simu_complete_chen} Simulation numérique pour \Chen  -- Graduations en~$cm$ -- L'échelle des niveaux de gris est donnée par la  Figure~\ref{fig:schema_correspondance_gris} -- Les valeurs des paramètres pour réaliser cette simulation numérique sont présentées dans la Table~\ref{table_param}. -- Pour ce patient, pas d'intention de reproduire la forme de la tumeur. }
 \end{figure}
 
 %\mylettrine{D}{ans} tout ce chapitre 
