--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -23,7 +23,7 @@ keywords = "Signal transduction "
 
 
 @article{Andersson2006,
-title = "Gastrointestinal Stromal Tumors With KIT Exon 11 Deletions Are Associated With Poor Prognosis",
+title = "Gastrointestinal Stromal Tumors With {KIT} Exon 11 Deletions Are Associated With Poor Prognosis",
 journal = "Gastroenterology",
 volume = "130",
 issue = "6",
@@ -103,7 +103,7 @@ keywords = "Optimization of cancer treatments "
 }
 
 @article{schramm2013,
-  title={Tumor response and clinical outcome in metastatic gastrointestinal stromal tumors under sunitinib therapy: comparison of RECIST, Choi and volumetric criteria},
+  title={Tumor response and clinical outcome in metastatic gastrointestinal stromal tumors under sunitinib therapy: comparison of {RECIST}, Choi and volumetric criteria},
   author={Schramm, N. and Englhart, E. and Schlemmer, M. and Hittinger, M. and {\"U}bleis, C. and Becker, C.R. and Reiser, M.F. and Berger, F.},
   journal={European journal of radiology},
   volume={82},
@@ -147,6 +147,27 @@ keywords = "Optimization of cancer treatments "
   publisher={Elsevier}
 }
 
+@article{rosset2004osirix,
+  title={OsiriX: an open-source software for navigating in multidimensional DICOM images},
+  author={Rosset, Antoine and Spadola, Luca and Ratib, Osman},
+  journal={Journal of digital imaging},
+  volume={17},
+  number={3},
+  pages={205--216},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{ratib2006open,
+  title={Open-source software in medical imaging: development of OsiriX},
+  author={Ratib, Osman and Rosset, Antoine},
+  journal={International Journal of Computer Assisted Radiology and Surgery},
+  volume={1},
+  number={4},
+  pages={187--196},
+  year={2006},
+  publisher={Springer}
+}
 
 @article{houk2010relationship,
   title={Relationship between exposure to sunitinib and efficacy and tolerability endpoints in patients with cancer: results of a pharmacokinetic/pharmacodynamic meta-analysis},
@@ -302,7 +323,7 @@ URL = {http://www.ncbi.nlm.nih.gov/pubmed/15928335}
 
 @article{Nilsson2005,
 author = {Nilsson, B. and Bumming, P. and Meis-Kindblom, J.M. and Oden,  A. and Dortok, A. and Gustavsson, B. and Sablinska, K. and Kindblom, L.G.},
-title = {Gastrointestinal stromal tumors: the incidence, prevalence, clinical course, and prognostication in the preimatinib mesylate era--a population-based study in western Sweden},
+title = {Gastrointestinal stromal tumors: the incidence, prevalence, clinical course, and prognostication in the preimatinib mesylate era--a population-based study in western {Sweden}},
 journal = {Cancer},
 volume = {103},
 number = {4},
@@ -392,7 +413,7 @@ author = "George D Demetri and Allan T van Oosterom and Christopher R Garrett an
 }
 
 @article{mccollough2009strategies,
-  title={Strategies for reducing radiation dose in CT},
+  title={Strategies for reducing radiation dose in {CT}},
   author={McCollough, Cynthia H and Primak, Andrew N and Braun, Natalie and Kofler, James and Yu, Lifeng and Christner, Jodie},
   journal={Radiologic Clinics of North America},
   volume={47},
@@ -429,7 +450,7 @@ URL = {http://www.ncbi.nlm.nih.gov/pubmed/18487569}
 }
 
 @article{goldman2008principles,
-  title={Principles of CT: multislice CT},
+  title={Principles of {CT}: multislice {CT}},
   author={Goldman, Lee W},
   journal={Journal of nuclear medicine technology},
   volume={36},
@@ -451,7 +472,7 @@ URL = {http://www.ncbi.nlm.nih.gov/pubmed/18487569}
 }
 
 @article{rengo2011optimal,
-  title={The optimal contrast media policy in CT of the liver. Part II: Clinical protocols},
+  title={The optimal contrast media policy in {CT} of the liver. Part II: Clinical protocols},
   author={Rengo, Marco and Bellini, Davide and De Cecco, Carlo N and Osimani, Marcello and Vecchietti, Fabrizio and Caruso, Damiano and Maceroni, Marco M and Lucchesi, Paola and Iafrate, Franco and Palombo, Erica and others},
   journal={Acta Radiologica},
   volume={52},
@@ -671,7 +692,7 @@ urldate = {20/07/2015}
 }
 
 @article{latige2013second,
-  title={A second order Cartesian finite volume method for elliptic interface and embedded Dirichlet problems},
+  title={A second order Cartesian finite volume method for elliptic interface and embedded {Dirichlet} problems},
   author={Latige, Manuel and Colin, T and Gallice, G},
   journal={Computers \& Fluids},
   volume={83},
@@ -741,16 +762,16 @@ urldate = {20/07/2015}
 
 
 @misc{balay2012petsc,
-  title={PETSc Web page, 2012},
+  title={{PETSc} Web page, 2012},
   author={Balay, Satish and Brown, Jed and Buschelman, Kris and Gropp, William D and Kaushik, Dinesh and Knepley, Matthew G and McInnes, Lois Curfman and Smith, Barry F and Zhang, Hong},
   year={2012}
 }
 
-@techreport{balay2012zhang,
-  title={Zhang H. PETSc users manual},
-  author={Balay, Satish and Brown, Jed and Buschelman, Kris and Eijkhout, Victor and Gropp, William D and Kaushik, Dinesh and Knepley, Matthew G and McInnes, Lois Curfman and Smith, Barry F},
-  year={2012},
-  institution={Technical Report ANL-95/11-Revision 3.3, Argonne National Laboratory}
+@techreport{balay2014petsc,
+  title={{PETSc} Users Manual Revision 3.5},
+  author={Balay, S and Abhyankar, S and Adams, M and Brown, J and Brune, P and Buschelman, K and Eijkhout, V and Gropp, W and Kaushik, D and Knepley, M and others},
+  year={2014},
+  institution={Argonne National Laboratory (ANL)}
 }
 
 
@@ -795,7 +816,7 @@ urldate = {20/07/2015}
 }
 
 @article{rubin2001kit,
-  title={KIT activation is a ubiquitous feature of gastrointestinal stromal tumors},
+  title={{KIT} activation is a ubiquitous feature of gastrointestinal stromal tumors},
   author={Rubin, Brian P and Singer, Samuel and Tsao, Connie and Duensing, Anette and Lux, Marcia L and Ruiz, Robert and Hibbard, Michele K and Chen, Chang-Jie and Xiao, Sheng and Tuveson, David A and others},
   journal={Cancer research},
   volume={61},
@@ -806,7 +827,7 @@ urldate = {20/07/2015}
 }
 
 @article{lux2000kit,
-  title={KIT extracellular and kinase domain mutations in gastrointestinal stromal tumors},
+  title={{KIT} extracellular and kinase domain mutations in gastrointestinal stromal tumors},
   author={Lux, Marcia L and Rubin, Brian P and Biase, Tara L and Chen, Chang-Jie and Maclure, Timothy and Demetri, George and Xiao, Sheng and Singer, Samuel and Fletcher, Christopher DM and Fletcher, Jonathan A},
   journal={The American journal of pathology},
   volume={156},
@@ -817,7 +838,7 @@ urldate = {20/07/2015}
 }
 
 @article{lasota2000mutations,
-  title={Mutations in exons 9 and 13 of KIT gene are rare events in gastrointestinal stromal tumors: a study of 200 cases},
+  title={Mutations in exons 9 and 13 of {KIT} gene are rare events in gastrointestinal stromal tumors: a study of 200 cases},
   author={Lasota, Jerzy and Wozniak, Agnieszka and Sarlomo-Rikala, Maarit and Rys, Janusz and Kordek, Radzislaw and Nassar, Aziza and Sobin, Leslie H and Miettinen, Markku},
   journal={The American journal of pathology},
   volume={157},
@@ -839,7 +860,7 @@ urldate = {20/07/2015}
 }
 
 @article{kim2014ct,
-  title={CT perfusion of the liver: principles and applications in oncology},
+  title={{CT} perfusion of the liver: principles and applications in oncology},
   author={Kim, Se Hyung and Kamaya, Aya and Willmann, J{\"u}rgen K},
   journal={Radiology},
   volume={272},
@@ -850,7 +871,7 @@ urldate = {20/07/2015}
 }
 
 @article{ichikawa2006multiphasic,
-  title={Multiphasic contrast-enhanced multidetector-row CT of liver: contrast-enhancement theory and practical scan protocol with a combination of fixed injection duration and patients’ body-weight-tailored dose of contrast material},
+  title={Multiphasic contrast-enhanced multidetector-row {CT} of liver: contrast-enhancement theory and practical scan protocol with a combination of fixed injection duration and patients’ body-weight-tailored dose of contrast material},
   author={Ichikawa, Tomoaki and Erturk, Sukru Mehmet and Araki, Tsutomu},
   journal={European journal of radiology},
   volume={58},
@@ -883,7 +904,7 @@ urldate = {20/07/2015}
 }
 
 @article{gottlieb2006fifth,
-  title={A fifth order flux implicit WENO method},
+  title={A fifth order flux implicit {WENO} method},
   author={Gottlieb, Sigal and Mullen, Julia S and Ruuth, Steven J},
   journal={Journal of Scientific Computing},
   volume={27},
@@ -996,7 +1017,7 @@ urldate = {20/07/2015}
 
 
 @article{longo2015cluster,
-  title={Cluster analysis of quantitative parametric maps from DCE-MRI: application in evaluating heterogeneity of tumor response to antiangiogenic treatment},
+  title={Cluster analysis of quantitative parametric maps from {DCE-MRI}: application in evaluating heterogeneity of tumor response to antiangiogenic treatment},
   author={Longo, Dario Livio and Dastr{\`u}, Walter and Consolino, Lorena and Espak, Miklos and Arigoni, Maddalena and Cavallo, Federica and Aime, Silvio},
   journal={Magnetic resonance imaging},
   year={2015},
@@ -1007,7 +1028,7 @@ urldate = {20/07/2015}
 @article{materka1998texture,
   title={Texture analysis methods--a review},
   author={Materka, Andrzej and Strzelecki, Michal and others},
-  journal={Technical university of lodz, institute of electronics, COST B11 report, Brussels},
+  journal={Technical university of {Lodz}, institute of electronics, COST B11 report, Brussels},
   pages={9--11},
   year={1998}
 }
@@ -1044,7 +1065,7 @@ urldate = {20/07/2015}
 }
 
 @article{hatt2009fuzzy,
-  title={A fuzzy locally adaptive Bayesian segmentation approach for volume determination in PET},
+  title={A fuzzy locally adaptive Bayesian segmentation approach for volume determination in {PET}},
   author={Hatt, Mathieu and Rest, Le and Cheze, Catherine and Turzo, Alexandre and Roux, Christian and Visvikis, Dimitris},
   journal={Medical Imaging, IEEE Transactions on},
   volume={28},
@@ -1067,7 +1088,7 @@ urldate = {20/07/2015}
 
 
 @article{chabat2003obstructive,
-  title={Obstructive Lung Diseases: Texture Classification for Differentiation at CT 1},
+  title={Obstructive Lung Diseases: Texture Classification for Differentiation at {CT} 1},
   author={Chabat, Francois and Yang, Guang-Zhong and Hansell, David M},
   journal={Radiology},
   volume={228},
@@ -1078,7 +1099,7 @@ urldate = {20/07/2015}
 }
 
 @article{napel2010automated,
-  title={Automated Retrieval of CT Images of Liver Lesions on the Basis of Image Similarity: Method and Preliminary Results 1},
+  title={Automated Retrieval of {CT} Images of Liver Lesions on the Basis of Image Similarity: Method and Preliminary Results 1},
   author={Napel, Sandy A and Beaulieu, Christopher F and Rodriguez, Cesar and Cui, Jingyu and Xu, Jiajing and Gupta, Ankit and Korenblum, Daniel and Greenspan, Hayit and Ma, Yongjun and Rubin, Daniel L},
   journal={Radiology},
   volume={256},
@@ -1102,7 +1123,7 @@ urldate = {20/07/2015}
 -- biblio Moreau Yosida --
 
 @article{lemarechal1997practical,
-  title={Practical aspects of the Moreau--Yosida regularization: Theoretical preliminaries},
+  title={Practical aspects of the {Moreau}--{Yosida} regularization: Theoretical preliminaries},
   author={Lemar{\'e}chal, Claude and Sagastiz{\'a}bal, Claudia},
   journal={SIAM Journal on Optimization},
   volume={7},
@@ -1113,7 +1134,7 @@ urldate = {20/07/2015}
 }
 
 @article{mifflin1999properties,
-  title={Properties of the Moreau-Yosida regularization of a piecewise C 2 convex function},
+  title={Properties of the {Moreau}-{Yosida} regularization of a piecewise ${C}^2$ convex function},
   author={Mifflin, Robert and Qi, Liqun and Sun, Defeng},
   journal={Mathematical programming},
   volume={84},
