--- a/manuscrit_G_LEFEBVRE/conclusion.tex
+++ b/manuscrit_G_LEFEBVRE/conclusion.tex
@@ -33,7 +33,7 @@ synthèse d'images scanners ont finalement été optimisés et ont permis la gé
 
 
 \paragraph{}
-Un critère quantifiant l'\hetero a également été construit à partir de l'analyse de l'intensité des niveaux de gris des pixels contenus dans les images. Robuste, il permet d'attribuer un pourcentage d'\hetero a une tumeur présente sur une image quelconque, qu'elle soit médicale ou qu'elle provienne  de la simulation numérique. Il permet ainsi de quantifier ce qui restait jusqu'alors à l'appréciation personnelle de celui qui regarde les images. Pour \Nber, ce critère met en avant la proximité de l'évolution de l'\hetero clinique avec celle constatée sur les simulations numériques. Cependant, pour \Chen, ce quantificateur de l'\hetero démontre les limites du modèle EDP : l'\hetero n'est ici pas bien décrite. La sensibilité du modèle vis-à-vis de la condition initiale semble donc importante. Le fait que celle-ci soit choisie  homogène, alors que la donnée ne l'est pas biaise donc l'ensemble de la simulation numérique. Pour pallier à cela, il faudrait alors être capable de créer des conditions initiales qui soient cliniquement consistantes et en accord avec l'imagerie. Et le problème est bien là... Admettons que l'on considère une condition initiale avec de la nécrose à un endroit donné. Il se pose d'abord le problème de savoir quelle quantité en mettre puisque celle-ci n'est pas déterminable à partir des scanners. Ensuite une telle configuration  signifie que l'endroit nécrosé en question n'est pas suffisamment vascularisé. On ne peut donc pas considérer une vascularisation initiale constante dans ce cas. Comment la choisir alors ?
+Un critère quantifiant l'\hetero a également été construit à partir de l'analyse de l'intensité des niveaux de gris des pixels contenus dans les images. Robuste, il permet d'attribuer un pourcentage d'\hetero à  une tumeur présente sur une image quelconque, qu'elle soit médicale ou qu'elle provienne  de la simulation numérique. Il permet ainsi de quantifier ce qui restait jusqu'alors à l'appréciation personnelle de celui qui regarde les images. Pour \Nber, ce critère met en avant la proximité de l'évolution de l'\hetero clinique avec celle constatée sur les simulations numériques. Cependant, pour \Chen, ce quantificateur de l'\hetero démontre les limites du modèle EDP : l'\hetero n'est ici pas bien décrite. La sensibilité du modèle vis-à-vis de la condition initiale semble donc importante. Le fait que celle-ci soit choisie  homogène, alors que la donnée ne l'est pas biaise donc l'ensemble de la simulation numérique. Pour pallier cela, il faudrait alors être capable de créer des conditions initiales qui soient cliniquement consistantes et en accord avec l'imagerie. Et le problème est bien là... Admettons que l'on considère une condition initiale avec de la nécrose à un endroit donné. Il se pose d'abord le problème de savoir quelle quantité en mettre puisque celle-ci n'est pas déterminable à partir des scanners. Ensuite une telle configuration  signifie que l'endroit nécrosé en question n'est pas suffisamment vascularisé. On ne peut donc pas considérer une vascularisation initiale constante dans ce cas. Comment la choisir alors ?
 
 
 \paragraph{}
