--- a/manuscrit_G_LEFEBVRE/glossaire.tex
+++ b/manuscrit_G_LEFEBVRE/glossaire.tex
@@ -10,6 +10,7 @@
 \item[Chimiotactisme] Phénomène par lequel des cellules dirigent leurs mouvements selon le gradient de concentration d'une certaine molécule.
 \item[Cytotoxique] Qui détruit les cellules.
 \item[Développement thérapeutique] Série de traitements utilisés. La nécessité de changer de traitement intervient lors des rechutes successives. 
+\item[Endothélial] Relatif aux cellules qui recouvrent la paroi intérieure des vaisseaux sanguins. Leur multiplication et leur maturation permettent l'angiogenèse.
 \item[Extravasion] Processus par lequel les cellules invasives de tumeur primaire peuvent traverser les membranes pour créer des métastases. 
 \item[Facteur de croissance] Protéine externe à la cellule commandant sa croissance ou sa duplication.
 \item[Hypoxie] Manque d'oxygène.
