--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -95,6 +95,15 @@
 
 \newcommand{\diff}[2]{\frac{\partial #1}{\partial #2}}
 
+\newcommand{\samefootnote}[1]{\textsuperscript{\hypersetup{hidelinks}\ref{#1}}}
+%%\newcommand{\samefootnote}[1]{\footref{#1}} %%% avec le packacke footmisc
+
+\newcommand{\myhrule}{\begin{center}
+\hspace*{.05\textwidth}\textsuperscript{\rule{.33\textwidth}{0.4pt}} \hfill 
+\begin{tabular}{ccc}&*& \\ *&&*\end{tabular}\hfill 
+\textsuperscript{\rule{.33\textwidth}{0.4pt}}\hspace*{.05\textwidth}
+\end{center}}
+
 %%%%%% ===================================================
 %%%%%%          ***  Commande de dessins   ***
 %%%%%% ===================================================
