--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -8,30 +8,33 @@ Je remercie aussi Olivier Saut, directeur %chargé
 de recherche CNRS, qui m'a épaulé au cours de ces 3 années également. Il m'a particulièrement aidé sur l'aspect numérique, logiciel et informatique de ma thèse. Je lui suis reconnaissant pour sa patience lors de la résolution des différents problèmes informatiques que j'ai pu rencontrer. 
 
 \paragraph{}
-Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autres.
+Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites. 
 
 \paragraph{}
 Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre clinique et biologique sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
 
 \paragraph{}
-Je tiens à remercier Stéphanie Salmon et Simona Mancini d'avoir accepté de rapporter mon manuscrit de thèse.\todo{remerciements jury}
+Je tiens à remercier Stéphanie Salmon (professeur de l'Université de Reims) et Simona Mancini (maître de conférence de l'Université d'Orléans) d'avoir accepté de rapporter mon manuscrit de thèse. Leur regard neuf sur mes travaux m'ont permis de mieux expliquer certaines notions importantes et certains choix effectués dans mes travaux.
+
+\paragraph{}
+Je salue également la présence des examinateurs de ce travail~: Nicolas Meunier (maître de conférence de l'Université Paris Descartes) ainsi que François Cornelis et Olivier Saut également. 
 
 
 \paragraph{}
-Je remercie Hassan Fathallah-Shaykh, professeur à l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué  à l'amélioration de celle-ci.
+Je remercie Hassan Fathallah-Shaykh, professeur à l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué à l'amélioration de celle-ci.
 
 \paragraph{}
 Je remercie également Patricio Cumsille, chercheur de l'université du Biobío (Chili) et de l'université du Chili (Santiago, Chili), pour sa collaboration. Il a étudié avec moi, lors de sa visite d'un an en France, au sein de notre équipe de recherche, un modèle qui a précédé celui présenté dans ce manuscrit. 
 
 \paragraph{}
-Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils m'ont apportées.
+Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils m'ont apportées. 
 
 \paragraph{}
 Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHIS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'Oncologie}), qui au fil du temps sont devenus bien plus que de simples collègues, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les divers débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
 
 \paragraph{}
 Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir décelé les fautes et coquilles en tout genre. 
-Merci notamment à Vinciane, Cynthia et Eléonore notamment pour leurs contributions à cette tâche non des plus aisées.
+Merci notamment à Vinciane, ainsi qu'à Cynthia et Eléonore pour leurs contributions à cette tâche non des plus aisées.
 
 \paragraph{}
 Enfin, je remercie tout particulièrement Vinciane pour sa bienveillance et son soutien au quotidien. 
@@ -39,8 +42,12 @@ Merci de la force et de la motivation que tu me donnes.
 Merci de ta patience et de ta compréhension face à mes journées de travail qui se sont allongées et intensifiées durant la période de rédaction du présent manuscrit. 
 
 %%  ========= Financements ==============
-\newpage
-\section*{Financements / Funding}
+%%\newpage
+\vfill
+%%\hrule
+\myhrule
+\vspace*{5mm}
+\section*{\large Financements / Funding}
 Ces travaux ont été financés par l'Université de Bordeaux. 
 Merci également à l'INRIA et au CNRS d'avoir financée plusieurs missions en France et à l'étranger.
 
