--- a/manuscrit_G_LEFEBVRE/resume.tex
+++ b/manuscrit_G_LEFEBVRE/resume.tex
@@ -6,23 +6,24 @@
 \subsection*{\titrefr}
 \vfill
 \paragraph{Résumé~:} Cette thèse présente les travaux menés sur l'analyse et la modélisation de l'\hetero tumorale lors de résistance aux traitements. 
-Nous présentons ici un modèle EDP, dépendant de chaque patient, et prenant en compte deux types de traitements différents. Il reproduit qualitativement et quantitativement les différentes étapes de la croissance d'une tumeur soumise à ces traitements. Afin de pallier à une instabilité numérique liée à ce type de modélisation, un nouveau schéma numérique est construit~: le \twinweno. 
-Nous développons ensuite une méthode de synthèse d'images scanners de sorte à rendre meilleur la comparaison entre les résultats numériques et les données cliniques.  
+Nous présentons ici un modèle EDP, dépendant de chaque patient, et prenant en compte deux types de traitements différents. Il reproduit qualitativement et quantitativement les différentes étapes de la croissance d'une tumeur soumise à ces traitements. Afin de pallier une instabilité numérique liée à ce type de modélisation, un nouveau schéma numérique est construit~: le \twinweno. 
+Nous développons ensuite une méthode de synthèse d'images scanners de sorte à rendre meilleure la comparaison entre les résultats numériques et les données cliniques.  
 Enfin un critère robuste permettant de quantifier l'\hetero à la fois des images cliniques et des images de synthèse, est construit. 
 
-\paragraph{Mots-clés~:} modélisation, simulation numérique, cancer, croissance tumorale, \hetero tumorale, résistance aux traitements
+\paragraph{Mots-clés~:} modélisation, simulation numérique, cancer, croissance tumorale, \hetero tumorale, résistance aux traitements, EDPs
 
 \vfill
-\hrule
+%\hrule
+\myhrule
 \vfill
 
 \subsection*{\titreen}
 \vfill
 \paragraph{Abstract~:} This thesis deals with tumor heterogeneity analysis and modeling during treatments resistances. 
-A patient-dependent PDEs model, that takes into account to kind of treatments, is presented. It qualitatively and quantitatively reproduces the different stage during the tumor growth undergoing treatments. In order to overcome a numerical instability linked to the tyoe of modeling, a new numerical scheme is built~: the \twinweno. 
+A patient-dependent PDEs model, that takes into account two kinds of treatments, is presented. It qualitatively and quantitatively reproduces the different stage during the tumor growth undergoing treatments. In order to overcome a numerical instability linked to the type of modeling, a new numerical scheme is built~: the \twinweno. 
 Then, an image synthesis method is developed to enable a better comparison between the numerical results and the clinical data. 
-Finally, a robust criteria that quantify the tumor heterogeneity from the clinical data and from the synthesis images, is built. 
+Finally, a robust criteria that quantifies the tumor heterogeneity from the clinical data and from the synthesis images, is built. 
 
-\paragraph{Keywords~:} modeling, numerical simulation, cancer, tumor growth, tumor heterogeneity, treatments resistances
+\paragraph{Keywords~:} modeling, numerical simulation, cancer, tumor growth, tumor heterogeneity, treatments resistances, PDEs
 
 \end{document}
